--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         }
     </style>
 </head>
-<body class="w-full h-full overflow-hidden">
+<body class="w-full h-screen overflow-hidden">
     <main class="w-full h-screen relative flex justify-center items-center">
-        <div class="incoming w-full h-screen absolute bg-red-900 z-[1]">
+        <div class="incoming overflow-hidden w-full h-screen absolute bg-red-900 z-[1]">
             <img class="incomingImg w-full h-screen object-cover object-center" src="" alt="">
         </div>
-        <div class="front absolute bg-green-900 w-full h-screen z-[2]">
+        <div class="front overflow-hidden absolute bg-green-900 w-full h-screen z-[2]">
             <img class="frontImg w-full h-screen object-cover object-center" src="" alt="">
         </div>
         <div class="front-content absolute w-full h-screen z-[3] flex flex-col justify-between items-center">
